--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   mail-backup:
     hostname: ${CONTAINER_NAME}
@@ -16,14 +15,15 @@ services:
       - MAIL_PASSWORD=${MAIL_PASSWORD}
       - MAIL_FROM=${MAIL_FROM}
       - MAIL_TO=${MAIL_TO}
-      - HOST_URL=http://${HOST_HOSTNAME}:${PIPELINE_PORT}
+      - HOST_URL=https://${HOST_HOSTNAME}:${PIPELINE_PORT}
       - MAIL_LEVEL_OK=OFF 
       - MAIL_LEVEL_FAIL=LINK
       - TZ=Europe/Berlin
       - JOB_TITLE=Mail-Backup
     ports:
-      - ${PIPELINE_PORT}:80
+      - ${PIPELINE_PORT}:443
     volumes:
+      - /media/nas/docker/common/apache:/apache:ro
       - ${MAIL_FOLDER}:/var/imapbox
       - ${UNSYNCED_FOLDER}:/unsynced
       - ${CONFIG_DIR}:/etc/imapbox
